[ai] reports with names

--- a/notebooks/OnlineNormSoftmax.ipynb
+++ b/notebooks/OnlineNormSoftmax.ipynb
@@ -199,48 +199,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "naive\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 100.56180041666666\n",
-      "Total: 2413.4832099999999\n",
+      "Mean: 99.282571250000004\n",
+      "Total: 2382.7817100000002\n",
       "Iters: 24\n",
-      "Warmup Mean: 99.403483499999993\n",
-      "Warmup Total: 198.80696699999999\n",
+      "Warmup Mean: 98.842905999999999\n",
+      "Warmup Total: 197.685812\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 100.56180041666667\n",
-      "Slowest Mean: 100.56180041666667\n",
+      "Fastest Mean: 99.282571250000004\n",
+      "Slowest Mean: 99.282571250000004\n",
       "\n",
+      "naive unrolled\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 92.765476359999994\n",
-      "Total: 2319.1369089999998\n",
+      "Mean: 93.475820879999986\n",
+      "Total: 2336.8955219999998\n",
       "Iters: 25\n",
-      "Warmup Mean: 93.467702000000003\n",
-      "Warmup Total: 186.93540400000001\n",
+      "Warmup Mean: 92.348139500000002\n",
+      "Warmup Total: 184.696279\n",
       "Warmup Iters: 2\n",
-      "Fastest Mean: 92.765476359999994\n",
-      "Slowest Mean: 92.765476359999994\n",
+      "Fastest Mean: 93.475820880000001\n",
+      "Slowest Mean: 93.475820880000001\n",
       "\n",
+      "online normalization\n",
       "---------------------\n",
       "Benchmark Report (ms)\n",
       "---------------------\n",
-      "Mean: 123.03981573684212\n",
-      "Total: 2337.7564990000001\n",
+      "Mean: 123.99522015789475\n",
+      "Total: 2355.9091830000002\n",
       "Iters: 19\n",
-      "Warmup Mean: 123.4338005\n",
-      "Warmup Total: 246.86760100000001\n",
+      "Warmup Mean: 123.9528025\n",
+      "Warmup Total: 247.90560500000001\n",
       "Warmup Iters: 2\n",
       "Fastest Mean: 1.7976931348623157e+308\n",
-      "Slowest Mean: 123.03981573684212\n",
+      "Slowest Mean: 123.99522015789474\n",
       "\n"
      ]
     }
@@ -255,8 +258,11 @@
     "fn online(logits: Column[nelts]):\n",
     "    var probs = logits.softmax_online()\n",
     "    keep(probs)\n",
+    "print(\"naive\")\n",
     "bench[naive, \"naive\"]()\n",
+    "print(\"naive unrolled\")\n",
     "bench[naive_unrolled, \"naive unrolled\"]()\n",
+    "print(\"online normalization\")\n",
     "bench[online, \"online normalization\"]()"
    ]
   },
