[ai] update unittest results

--- a/notebooks/OnlineNormSoftmax.ipynb
+++ b/notebooks/OnlineNormSoftmax.ipynb
@@ -146,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logits 0.1315377950668335 0.458650141954422 0.21895918250083923 0.67886471748352051\n",
-      "probabilities\t 0.076156176626682281 0.10562536865472794 0.083113528788089752 0.1316455602645874\n",
-      "expected sum=1 actual= 1.0\n",
-      "False\n",
+      "logits 0.59443563222885132 0.412676602602005 0.23536258935928345 0.065507419407367706\n",
+      "probabilities\t 0.098158754408359528 0.081844985485076904 0.06854654848575592 0.05783868208527565\n",
+      "expected sum=1 actual= 1.0000001192092896\n",
+      "True\n",
       "True\n"
      ]
     }
