implement column and benchmark

--- a/notebooks/OnlineNormSoftmax.ipynb
+++ b/notebooks/OnlineNormSoftmax.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,77 +284,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import benchmark\n",
-    "from memory import memset_zero\n",
-    "from random import rand"
+    "## Implement the `Column` struct\n",
+    "\n",
+    "### composition instead of inheritance\n",
+    "\n",
+    "column is essentially a [n, 1] matrix, which means we can take advantage of the `Matrix` we had improved.\n",
+    "\n",
+    "Mojo does not support struct extending struct,  so we cannot do something like \n",
+    "```mojo\n",
+    "struct Column[nelts: Int](Matrix[nelts, 1])\n",
+    "```\n",
+    "We will use composition instead of inheritance.\n",
+    "\n",
+    "### softmax algorithms shall be implemented as struct methods.\n",
+    "\n",
+    "### implement `__eq__` to assist comparing two columns in unittest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alias type = DType.float32\n",
-    "\n",
-    "struct Matrix[rows: Int, cols: Int]:\n",
-    "    var data: DTypePointer[type]\n",
-    "\n",
-    "    # Initialize zeroeing all values\n",
-    "    fn __init__(inout self):\n",
-    "        self.data = DTypePointer[type].alloc(rows * cols)\n",
-    "        memset_zero(self.data, rows * cols)\n",
-    "\n",
-    "    # Initialize taking a pointer, don't set any elements\n",
-    "    fn __init__(inout self, data: DTypePointer[type]):\n",
-    "        self.data = data\n",
-    "\n",
-    "    # Initialize with random values\n",
-    "    @staticmethod\n",
-    "    fn rand() -> Self:\n",
-    "        var data = DTypePointer[type].alloc(rows * cols)\n",
-    "        rand(data, rows * cols)\n",
-    "        return Self(data)\n",
-    "\n",
-    "    fn __getitem__(self, y: Int, x: Int) -> Scalar[type]:\n",
-    "        return self.load[1](y, x)\n",
-    "\n",
-    "    fn __setitem__(self, y: Int, x: Int, val: Scalar[type]):\n",
-    "        self.store[1](y, x, val)\n",
-    "\n",
-    "    fn load[nelts: Int](self, y: Int, x: Int) -> SIMD[type, nelts]:\n",
-    "        return self.data.load[width=nelts](y * self.cols + x)\n",
-    "\n",
-    "    fn store[nelts: Int](self, y: Int, x: Int, val: SIMD[type, nelts]):\n",
-    "        return self.data.store[width=nelts](y * self.cols + x, val)\n",
-    "    fn __del__(owned self):\n",
-    "        self.data.free()\n",
-    "    fn __copyinit__(inout self, existing: Self):\n",
-    "        self.data = DTypePointer[type].alloc(rows * cols)\n",
-    "        memcpy[rows * cols](self.data, existing.data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "import math\n",
+    "alias ESP = 0.000001\n",
     "struct Column[nelts: Int]:\n",
     "    alias Col = Matrix[nelts, 1]\n",
     "    var elements: Self.Col\n",
@@ -420,25 +378,33 @@
     "        return probs\n",
     "    fn __eq__(self, other: Self) -> Bool:\n",
     "        for i in range(nelts):\n",
-    "            if self[i] != other[i]:\n",
+    "            var diff = self[i] - other[i]\n",
+    "            if math.abs[type, 1](diff) > ESP:\n",
     "                return False\n",
     "        return True\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unittest softmax calculation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logits 0.1315377950668335 0.458650141954422 0.21895918250083923 0.67886471748352051\n",
-      "probabilities\t 0.076156176626682281 0.10562536865472794 0.083113528788089752 0.1316455602645874\n",
+      "logits 0.98255026340484619 0.75335586071014404 0.072685882449150085 0.88470715284347534\n",
+      "probabilities\t 0.15293651819229126 0.12161112576723099 0.061569001525640488 0.13868147134780884\n",
       "expected sum=1 actual= 1.0\n",
-      "False\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -456,6 +422,107 @@
     "print(\"expected sum=1\", \"actual=\", s)\n",
     "print(probs == probs_online)\n",
     "print(probs == probs_unrolled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Benchmark\n",
+    "tip: use `keep` to provides a hint to the compiler to not optimize the variable use away.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "without `keep`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive\n",
+      "---------------------\n",
+      "Benchmark Report (ms)\n",
+      "---------------------\n",
+      "Mean: 1.7e-14\n",
+      "Total: 1.7e-05\n",
+      "Iters: 1000000000\n",
+      "Warmup Mean: 1.6500000000000001e-05\n",
+      "Warmup Total: 3.3000000000000003e-05\n",
+      "Warmup Iters: 2\n",
+      "Fastest Mean: 1.7e-14\n",
+      "Slowest Mean: 1.7e-14\n",
+      "\n",
+      "naive unrolled\n",
+      "---------------------\n",
+      "Benchmark Report (ms)\n",
+      "---------------------\n",
+      "Mean: 94.32451648\n",
+      "Total: 2358.1129120000001\n",
+      "Iters: 25\n",
+      "Warmup Mean: 94.027575999999996\n",
+      "Warmup Total: 188.05515199999999\n",
+      "Warmup Iters: 2\n",
+      "Fastest Mean: 94.32451648\n",
+      "Slowest Mean: 94.32451648\n",
+      "\n",
+      "online normalization\n",
+      "---------------------\n",
+      "Benchmark Report (ms)\n",
+      "---------------------\n",
+      "Mean: 1.7e-14\n",
+      "Total: 1.7e-05\n",
+      "Iters: 1000000000\n",
+      "Warmup Mean: 1.8499999999999999e-05\n",
+      "Warmup Total: 3.6999999999999998e-05\n",
+      "Warmup Iters: 2\n",
+      "Fastest Mean: 1.7e-14\n",
+      "Slowest Mean: 1.7e-14\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from benchmark import Unit\n",
+    "from benchmark.compiler import keep\n",
+    "alias nelts = 10000000\n",
+    "fn bench[func: fn (Column[nelts]) -> None, name: StringLiteral]():\n",
+    "    var logits = Column[nelts].rand()\n",
+    "    @always_inline\n",
+    "    @parameter\n",
+    "    fn test_fn():\n",
+    "        func(logits)\n",
+    "\n",
+    "    var report = benchmark.run[test_fn]()\n",
+    "    report.print(Unit.ms)\n",
+    "fn naive(logits: Column[nelts]):\n",
+    "    var x = logits.softmax()\n",
+    "fn naive_unrolled(logits: Column[nelts]):\n",
+    "    var x = logits.softmax_unroll()\n",
+    "fn online(logits: Column[nelts]):\n",
+    "    var x = logits.softmax_online()\n",
+    "print(\"naive\")\n",
+    "bench[naive, \"naive\"]()\n",
+    "print(\"naive unrolled\")\n",
+    "bench[naive_unrolled, \"naive unrolled\"]()\n",
+    "print(\"online normalization\")\n",
+    "bench[online, \"online normalization\"]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with `keep`:"
    ]
   },
   {
@@ -549,10 +616,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## interesting benchmark results\n",
+    "online normalization is worse than naive algorithm on CPU.\n",
+    "\n",
+    "Hypothesis: on CPU, the calculation is not memory bounded, but computation bounded.\n",
+    "\n",
+    "* How to prove/disprove our hypothesis?\n",
+    "\n",
+    "Future work, Mojo will support compiling to GPU, it would be interseting to do the same benchmark in Mojo on GPU. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
