explaning softmax, online softmax

--- a/notebooks/OnlineNormSoftmax.ipynb
+++ b/notebooks/OnlineNormSoftmax.ipynb
@@ -11,11 +11,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is about [online normalizer calculation for softmax](https://arxiv.org/abs/1805.02867). \n",
+    "This tutorial is about [online normalizer calculation for softmax](https://arxiv.org/abs/1806.02867). \n",
     "We use Mojo lang to implement two softmax algorithms: safe softmax and safe softmax with online normalizer calculation.\n",
     "\n",
     "\n",
-    "We will learn about some interesting aspects of the Mojo lang, such as how to use the move semantics in returning a large value from a function, which is more efficient, how to deepcopy a large value on the heap etc, and how to benchmark algorithms using the built-in `benchmark` package while avoiding some pitfalls."
+    "Along the way, we will learn about some intersting aspects of the Mojo lang, such as\n",
+    "- How to use move semantics to efficiently return large values from functions, avoiding unnecessary copying.\n",
+    "- Techniques for deep copying data on the heap when necessary.\n",
+    "- Benchmarking algorithms using Mojo's built-in `benchmark` package while avoiding common pitfalls."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explaning softmax, safe softmax, online normalizer calculation\n",
+    "\n",
+    "### What is softmax\n",
+    "The softmax function is a crucial component in many neural network architectures, particularly for multi-class classification tasks. It takes a vector of real numbers as input and transforms it into a probability distribution over the possible output classes.\n",
+    "\n",
+    "The softmax function is defined as:\n",
+    "\n",
+    "$$\n",
+    "softmax(x_i) = exp(x_i) / (sum(exp(x_j))\\ for\\ all\\ j)\n",
+    "$$\n",
+    "where $x_i$ is the value of the $i$'s logit.\n",
+    "\n",
+    "**problem**: However, when the input values $x_i$ are very large, the exponentials $exp(x_i)$ can result in overflow (becoming infinity or NaN). Conversely, if the input values are very small, the exponentials can underflow to zero, leading to an undefined result (division by zero).\n",
+    "\n",
+    "### What is safe softmax\n",
+    "safe softmax is invented to mitigate the overflow/underflow issue by subtracting the maximum value from the input vector before computing the exponentials:\n",
+    "$$\n",
+    "safe\\_softmax(x_i) = exp(x_i - max\\_x) / (sum(exp(x_j - max\\_x))\\ for\\ all\\ j)\n",
+    "$$\n",
+    "The safe softmax calculation is numerically stable and produces the same output as the standard softmax, but without the risk of overflow or underflow issues.\n",
+    "\n",
+    "**problem**: However, while standard softmax only does two, safe softmax does three passes over input vector. The additional pass comes from calculating the maximum value $max\\_x$, which comes with overhead.\n",
+    "\n",
+    "### What is online normalizer calculation for softmax\n",
+    "Online normalizer method reduces memory access per vector element for the safe softmax algorithm.\n",
+    "(screenshot is from the paper [arXiv:1805.02867](https://arxiv.org/abs/1805.02867))\n",
+    "\n",
+    "![online normalizer calculation for softmax](img/softmax_online.png)\n",
+    "\n",
+    "Essentially, the algorithm keeps the maximum value $m$ and the normalization term $d$ as it iterates\n",
+    "over elements of the input array. The final result is still numerically stable.\n",
+    "\n",
+    "**(maybe a) problem**: additonal math operations per vector element. \n",
+    "\n",
+    "**However, the algorithm works well on GPU  which have high arithmetic throughput but relatively lower memory bandwidth compared to their computational power.**\n",
+    "\n"
    ]
   },
   {
